// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test \`InvalidOperationError\` own keys 1`] = `
Array [
  "stack",
]
`;

exports[`Test \`InvalidOperationError\` own keys 2`] = `
Array [
  "stack",
  "message",
]
`;

exports[`Test \`InvalidOperationError\` own keys 3`] = `
Array [
  "stack",
  "message",
]
`;

exports[`Test \`InvalidOperationError\` own keys 4`] = `
Array [
  "stack",
  "message",
]
`;
